# ConnectomeInfluenceCalculator

./: .gitignore  .zenodo.json  CONTRIBUTING.md  InfluenceCalculator.py  Influence_calculation.py  LICENSE  README.md  pyproject.toml
InfluenceCalculator/: InfluenceCalculator.py  __init__.py
InfluenceCalculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
InfluenceCalculator/data/: __init__.py  celegans_edgelist.csv  celegans_meta.csv
examples/: celegans_worked_example.py
tests/: Influence_test_example.ipynb  README.md  conftest.py  test_InfluenceCalculator.py  test_influence_calculator.py
